--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -9,15 +9,10 @@ body {
 
 ul {
     list-style-type: none;
+    padding: 0;
 }
 
-/************Users index***********/
-
-.users_index_container {
-    display: flex;
-    justify-content: center;
-}
-
+/*user card*/
 .user_card {
     display: flex;
     gap: 20px;
@@ -34,4 +29,27 @@ ul {
 .user_card_posts {
     display: flex;
     align-items: end;
+}
+
+/************Users index***********/
+
+.users_index_container {
+    display: flex;
+    justify-content: center;
+}
+
+/************Users show***********/
+.users_show_container {
+    display: flex;
+    flex-direction: column;
+}
+
+.users_show_bio {
+    border: 1px solid gray;
+    padding: 25px;
+}
+
+.users_show_post {
+    border: 1px solid gray;
+    padding: 25px;
 }
