Add link from users index to users show

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -12,6 +12,11 @@ ul {
     padding: 0;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+}
+
 /*user card*/
 .user_card {
     display: flex;
