Create dinamic user picture

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
     <div>
         <li class="user_card">
         <div>
-            <img src="https://randomuser.me/api/portraits/men/19.jpg" />
+            <img src="https://randomuser.me/api/portraits/men/<%= @user.id %>.jpg" />
         </div>
             
         <p class="user_card_name" ><%= @user.name %></p>
