--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     <li>
       <a href="/users/<%=user.id%>" class="user_card">
         <div>
-          <img src="https://randomuser.me/api/portraits/men/19.jpg" />
+          <img src="https://randomuser.me/api/portraits/men/<%= user.id %>.jpg" />
         </div>
         <p class="user_card_name" ><%= user.name %></p>
         <p class="user_card_posts" >Number of posts: <span><%= user.posts_counter || 0 %></span></p>
