Add link from posts index to post show

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -36,6 +36,13 @@ a {
     align-items: end;
 }
 
+.post_short {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 10ch;
+}
+
 /************Users index***********/
 
 .users_index_container {
