--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,12 +16,16 @@
       <li>
         <div class="posts_index_post">
           <p>Post #<%= index + 1 %></p>
-          <p><%= post.text %></p>
+          <p class="post_short"><%= post.text %></p>
+          <a href=<%= "/users/#{@user.id}/posts/#{post.id}" %>>read more</a>
         </div>
         <ul class="posts_index_comments">
           <% post.recent_comments.each do |post| %>
             <li>
-              <p><span class="posts_index_commentator"><%= post.user.name %>:</span> <%= post.text %></p>
+              <p>
+                <span class="posts_index_commentator"><%= post.user.name %>:</span>
+                <%= post.text %>
+              </p>
             </li>
           <% end %>
         </ul>
