--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -86,3 +86,24 @@ a {
 .posts_index_commentator {
     font-weight: 600;
 }
+
+/************Posts show***********/
+
+.posts_show_container {
+    display: flex;
+    flex-direction: column;
+}
+
+.posts_show_post {
+    border: 1px solid gray;
+    padding: 25px;
+}
+
+.posts_show_comments {
+    border: 1px solid gray;
+    padding: 25px;
+}
+
+.posts_show_commentator {
+    font-weight: 600;
+}
