Implement create post function

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,7 @@
         <p class="user_card_posts" >Number of posts: <span><%= @user.posts_counter %></span></p>
         </li>
     </div>
+    <a href="/posts/new">Create new post</a>
     <div class="users_show_bio">
         <p>Bio</p>
         <p><%= @user.bio %></p>
