--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   <ul>
-    <% @posts_list.each_with_index do |post, index| %>
+    <% @user.posts.each_with_index do |post, index| %>
       <li>
         <div class="posts_index_post">
           <p>Post #<%= index + 1 %></p>
@@ -22,7 +22,7 @@
           <a href=<%= "/users/#{@user.id}/posts/#{post.id}" %>>read more</a>
         </div>
         <ul class="posts_index_comments">
-          <% post.recent_comments.each do |post| %>
+          <% post.comments.each do |post| %>
             <li>
               <p>
                 <span class="posts_index_commentator"><%= post.user.name %>:</span>
