--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
     <% @user.posts.each_with_index do |post, index| %>
       <li>
         <div class="posts_index_post">
-          <p>Post #<%= index + 1 %></p>
+          <p class="title-identifier">Post: <%= post.title %></p>
           <p class="post_short"><%= post.text %></p>
           <p>Comments: <%= post.comments_counter %></p>
           <p>Likes: <%= post.likes_counter %></p>
@@ -23,7 +23,7 @@
         </div>
         <ul class="posts_index_comments">
           <% post.comments.each do |post| %>
-            <li>
+            <li class="comment-identifier">
               <p>
                 <span class="posts_index_commentator"><%= post.user.name %>:</span>
                 <%= post.text %>
@@ -34,5 +34,7 @@
       </li>
     <% end %>
   </ul>
+
+  <button>Pagination</button>
 
 </section>
