--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,10 +17,12 @@
     <ul>
       <% @posts_list.each_with_index do |post, index| %>
         <li class="users_show_post">
-          <p>Post #<%= index + 1 %></p>
-          <p class="post_short"><%= post.text %></p>
-          <p>Comments: <%= post.comments_counter %></p>
-          <p>Likes: <%= post.likes_counter %></p>
+          <a href=<%="/users/#{@user.id}/posts/#{post.id}"%>>
+            <p>Post #<%= index + 1 %></p>
+            <p class="post_short"><%= post.text %></p>
+            <p>Comments: <%= post.comments_counter %></p>
+            <p>Likes: <%= post.likes_counter %></p>
+          </a>
         </li>
       <% end %>
     </ul>
